# working-bibliography-extension

./: .gitignore  CLAUDE.md  EPIC-INTEGRATION-PLAN.md  EXTENSION-DEVELOPER-GUIDE.md  FEATURE-STATUS.md  MILESTONE-04-SPRINT-DEFINITIONS.md  MILESTONE-ROADMAP.md  README.md  SESSION-HANDOFF.md  requirements.txt  run-tests.sh  startup-contract.json  test-results.json
.librarian/: current-project.json  project-index.json
docs/: COMPLIANCE-MATRIX.md  DOCUMENTATION-PROJECTION-GUIDE.md  EXTENSION-SDK-GUIDE.md  EXTENSION-SPECIFICATION-v1.md  LIBRARIAN-EXTENSION-ECOSYSTEM-MODEL-v1.md  SPRINT-PACKET-DEFINITIONS.md
docs/architecture/: ARCHITECTURE.md  EXTENSION-PORT-MODEL.md
docs/consumer/: AGENT-CAPABILITY-MODEL.md  CAPABILITY-PROJECTION-CONTRACT.md  CONSUMER-CAPABILITY-MODEL.md  LIBRARIAN-INTEGRATION-GUIDE.md
docs/contracts/: CAPABILITY-MANIFEST.md  CONTRACT-BOUNDARIES.md  EXTENSION-HANDSHAKE-CONTRACT.md  WB-LIBRARIAN-CONTRACT-v1.json
docs/decisions/: ADR-WB-001-embedding-is-not-the-artifact.md  ADR-WB-002-no-custom-custody-model.md  ADR-WB-003-contract-lives-in-extension-repo.md  ADR-WB-004-no-owner-decisions-from-extension.md  ADR-WB-005-extension-can-mutate-own-domain.md  ADR-WB-006-external-reference-custody-mode.md  ADR-WB-007-embedding-capability-boundary.md  ADR-WB-008-consumers-are-not-governance-participants.md  (+1 more)
docs/identity/: PROJECT-IDENTITY.md
mcp/: capabilities.json  permissions.json
project-state/: sprint-ledger.json
provider/: Cargo.toml
provider/src/: handler.rs  lib.rs  manifest.rs  qualification.rs
test-extension-extension/: README.md
(+173 files in other folders)
