[package]
name = "working-bibliography-provider"
version = "0.1.0"
edition = "2021"
description = "SDK provider wrapper for the Working Bibliography Extension"

[dependencies]
librarian-sdk = { git = "https://github.com/andrewdhannah/librarian-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
